Fix mobile overflow and price table layout

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .app-container {
   display: flex;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   overflow: hidden;
   position: relative;
 }
@@ -153,7 +153,7 @@
 
   .map-wrapper {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
   }
 
   /* Compare FAB adjustments */
